@@ -9,7 +9,7 @@
   <configure name="NAME" value="ImageMagick"/>
   <configure name="LIB_VERSION" value="0x656"/>
   <configure name="LIB_VERSION_NUMBER" value="6,5,6,10"/>
-  <configure name="RELEASE_DATE" value="2009-10-06"/>
+  <configure name="RELEASE_DATE" value="2009-10-08"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
   <configure name="EXEC-PREFIX" value="/usr/local"/>
